// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`calendar router addEventAttendee can add attendee 1`] = `
{
  "email": "tester@test.co",
  "id": undefined,
  "name": "tester",
}
`;

exports[`calendar router createCalendarEvent can create event 1`] = `
{
  "context": undefined,
  "description": "Test 1 2 3",
  "end": null,
  "id": 1,
  "isAllDay": false,
  "isPublic": false,
  "name": "test",
  "recordId": undefined,
  "start": Any<DateTime>,
  "urn": "urn:ads:platform:calendar-service:v1:/calendars/test/events/1",
}
`;

exports[`calendar router deleteCalendarEvent can delete event 1`] = `
{
  "deleted": true,
}
`;

exports[`calendar router deleteEventAttendee can delete attendee 1`] = `
{
  "deleted": true,
}
`;

exports[`calendar router exportCalendarEvents can export events 1`] = `
{
  "description": "Testing 1 2 3",
  "events": [],
  "name": "Test",
  "prodId": "//Government of Alberta//urn:ads:platform:calendar-service//EN",
  "url": "https://calendar-service/undefined",
}
`;

exports[`calendar router getCalendarEvents can get events 1`] = `
{
  "page": {},
  "results": [],
}
`;

exports[`calendar router getCalendars can get calendars 1`] = `
[
  {
    "description": "Testing 1 2 3",
    "displayName": "Test",
    "name": "test",
    "readRoles": [
      "test-reader",
    ],
    "updateRoles": [
      "test-updater",
    ],
    "urn": "urn:ads:platform:calendar-service:v1:/calendars/test",
  },
]
`;

exports[`calendar router getCalendars can handle no configuration 1`] = `[]`;

exports[`calendar router getEventAttendee can delete attendee 1`] = `
{
  "email": "tester@test.co",
  "id": 23,
  "name": "tester",
}
`;

exports[`calendar router getEventAttendees can get attendees 1`] = `[]`;

exports[`calendar router retrieveCalendarEvent can retrieve event 1`] = `
{
  "context": undefined,
  "description": "Test 1 2 3",
  "end": Any<DateTime>,
  "id": 12,
  "isAllDay": false,
  "isPublic": false,
  "name": "test",
  "recordId": undefined,
  "start": Any<DateTime>,
  "urn": "urn:ads:platform:calendar-service:v1:/calendars/test/events/12",
}
`;

exports[`calendar router setEventAttendee can set attendee 1`] = `
{
  "email": "tester@test.co",
  "id": 23,
  "name": "tester 2",
}
`;

exports[`calendar router updateCalendarEvent can update event 1`] = `
{
  "context": undefined,
  "description": "Test 1 2 3",
  "end": Any<DateTime>,
  "id": 12,
  "isAllDay": false,
  "isPublic": false,
  "name": "test 2",
  "recordId": undefined,
  "start": Any<DateTime>,
  "urn": "urn:ads:platform:calendar-service:v1:/calendars/test/events/12",
}
`;
